// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountOfChildrenField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="amountOfChildrenField"
          name="name"
          placeholder="Liczba osób na utrzymaniu"
          type="text"
          value="test"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podana ilość jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<AmountOfChildrenField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="amountOfChildrenField"
  name="name"
  placeholder="Liczba osób na utrzymaniu"
  type="text"
  value=""
/>
`;

exports[`<AmountOfChildrenField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="amountOfChildrenField"
          label="Test"
          name="name"
          placeholder="Liczba osób na utrzymaniu*"
          required=""
          type="text"
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<AmountOfChildrenField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="amountOfChildrenField"
          label="Test"
          name="name"
          placeholder="Liczba osób na utrzymaniu"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
